--- a/Macauto_MAM/en.lproj/Localizable.strings
+++ b/Macauto_MAM/en.lproj/Localizable.strings
@@ -23,9 +23,11 @@
 "COMPLETE_ERROR" = "Some error in your Connection. Please try again.";
 "DATA_LOADING" = "Loading...";
 
-"MSG_TITLE" = "Title";
+"MSG_TITLE" = "Content";
 "MSG_TIME" = "Time";
 
 "SETTING_LOGOUT" = "Logout";
 "SETTING_LOGOUT_ALERT_TITLE" = "Warning!";
 "SETTING_LOGOUT_ALERT_MSG" = "You won't receive msg after logout. Are you sure?";
+
+"DATE_TODAY" = "Today";
