--- a/Macauto_MAM/zh-Hant.lproj/Localizable.strings
+++ b/Macauto_MAM/zh-Hant.lproj/Localizable.strings
@@ -23,9 +23,11 @@
 "COMPLETE_ERROR" = "連線過程中產生錯誤. 請再嘗試一次.";
 "DATA_LOADING" = "讀取中...";
 
-"MSG_TITLE" = "標題";
+"MSG_TITLE" = "內容";
 "MSG_TIME" = "時間";
 
 "SETTING_LOGOUT" = "登出";
 "SETTING_LOGOUT_ALERT_TITLE" = "警告!";
 "SETTING_LOGOUT_ALERT_MSG" = "登出後將不會收到任何訊息. 確定?";
+
+"DATE_TODAY" = "今天";
